[package]
name = "parse-dat-url"
version = "0.1.0"
authors = ["Bruno Tavares <connect+github@bltavares.com>"]
edition = "2018"

[features]
default = ["std"]
std = ["regex/use_std"]
alloc = []

[dependencies]
url = "2.1.0"
regex = { default-features = false, version = "1.2.1" }
lazy_static = "1.3.0"

[dev-dependencies]
pretty_assertions = "0.6.1"