[package]
name = "parse-dat-url"
version = "0.1.0"
authors = ["Bruno Tavares <connect+github@bltavares.com>"]
edition = "2018"
keywords = ["dat"]
readme = "README.md"

[dependencies]
url = "2.1.0"
regex = "1.2.1"
lazy_static = "1.3.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
version-sync = "0.8.1"